# trace0-lambda-python-otel-logger

./: LICENSE  README.md  __init__.py  buffer.py  config.py  exporter.py  log_handler.py  logger_provider.py  model_types.py  processor.py  pyproject.toml  trace_context.py
.github/workflows/: publish.yml
trace0_lambda_otel_logger/: __init__.py  exporter.py  logger_provider.py
